@@ -1,6 +1,7 @@
 2025-02-15  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (top): Set `vc-handled-backends' to nil.
+	(tramp--test-enabled): Rearrange code.
 
 2024-12-29  Michael Albinus  <michael.albinus@gmx.de>
 
